--- a/easypay/src/styles/Navbar.css
+++ b/easypay/src/styles/Navbar.css
@@ -32,15 +32,30 @@
 }
 
 
+/* USER PROFILE LOGIN */
+.nav-link-custom {
+  color: black !important;
+  text-decoration: none;
+  font-weight: 600;
+  transition: color 0.3s ease;
+}
+
+.nav-link-custom:hover {
+  color: #a84adb !important; /* Optional: Change to your hover color */
+  text-decoration: none;
+}
+
+
 /* REGULAR NAV LINKS */
 .nav-link {
   color: #000000 !important;
-  font-weight: 500;
+  font-weight: 700;
   text-decoration: none !important;
   position: relative;
   overflow: hidden;
   transition: color 0.3s ease;
   padding-bottom: 4px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Hover underline animation for nav links (Dashboard) */
